@@ -50,6 +50,9 @@ Notes:
 [float]
 ===== Chores
 
+* Restrict Next.js instrumentation to `<13.3.0` for now, because of a known
+  issue with instrumentating the `next@13.3.0` dev server. ({issues}3263[#3263])
+
 
 [[release-notes-3.44.1]]
 ==== 3.44.1 2023/04/06
